[gd_scene load_steps=2 format=3 uid="uid://b5sotcvjlq5vw"]

[ext_resource type="Script" uid="uid://chsgbqu3o5njv" path="res://ui/components/guide_item.gd" id="1_ui8te"]

[node name="GuideItem" type="VBoxContainer"]
theme_override_constants/separation = 4
script = ExtResource("1_ui8te")

[node name="Name" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20

[node name="Label1" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="Label2" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="Label3" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 16
